# as-tree

./: .bazelrc  .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  WORKSPACE  bazel  index.html
.github/workflows/: ci.yml  rust.yml
main/: BUILD  main.rs
src/: BUILD  color.rs  lib.rs  main.rs  options.rs
src/trie/: display.rs  iter.rs  mod.rs
test/: BUILD  cli_tests.bzl  diff_one.sh  diff_tests.bzl  fixture_tests.bzl  generate_tests.bzl  run_and_diff_one.sh  run_one_cli.sh  run_one_fixture.sh  update_one.sh
test/cli/color/: run.sh  run.sh.exp
test/cli/full_path/: run.sh  run.sh.exp
test/cli/help/: help.sh  help.sh.exp  run.sh  run.sh.exp
test/cli/version/: run.sh  run.sh.exp  version.sh
test/fixture/: as-tree-absolute.txt  as-tree-absolute.txt.exp  as-tree.txt  as-tree.txt.exp  collapse.txt  collapse.txt.exp  double-top-level.txt  double-top-level.txt.exp  find-dot.txt  find-dot.txt.exp  sorbet-extension-c-h-cc-hh.txt.exp  sorbet-shuf.txt  sorbet.txt.exp  symbol.txt
test/fixtures/: as-tree-absolute.txt.exp  sorbet-extension-c-h-cc-hh.txt  sorbet-extension-c-h-cc-hh.txt.exp  sorbet-extension-md.txt  sorbet-extension-md.txt.exp  sorbet-shuf.txt.exp  sorbet.txt  symbol.txt.exp
tests/: tests.rs
tests/fixture/: as_tree_absolute.rs  as_tree_simple.rs  collapse.rs  double_top_level.rs  empty.rs  find_dot.rs  mod.rs  sorbet.rs  sorbet_extension_c_h_cc_hh.rs  sorbet_extension_md.rs  sorbet_shuf.rs  symbol.rs
tools/scripts/: ci-setup.sh  release.sh
